# llm-calibration-eval

./: .coverage  .gitignore  README.md  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
llm_calibration_eval/: __init__.py  __main__.py  cli.py  evaluator.py
llm_calibration_eval.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm_calibration_eval/calibration/: __init__.py  temperature_scaling.py
llm_calibration_eval/datasets/: __init__.py  trivia.py
llm_calibration_eval/metrics/: __init__.py  brier.py  ece.py  reliability.py
llm_calibration_eval/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
tests/: test_cli.py  test_evaluator.py  test_metrics.py  test_providers.py
