[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-calibration-eval"
version = "0.1.0"
description = "Measure and improve LLM confidence calibration — Brier score, ECE, reliability diagrams"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "llm-calibration-eval contributors" }]
keywords = ["llm", "calibration", "brier-score", "ece", "reliability-diagram"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.0.0",
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
llm-calibration-eval = "llm_calibration_eval.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["llm_calibration_eval*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "--cov=llm_calibration_eval --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["llm_calibration_eval"]
omit = ["tests/*"]
